hphp/test/zend/good/Zend/tests/traits/bug60173.php.expectf

Fatal error: Cannot instantiate trait foo in %s/bug60173.php on line 6
